style.css
/* RESET */
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
/* RESET */

/* GENERAL */
.flex{
    display: flex;
}

body{
    font-family: "DM Sans", sans-serif;
    height: 100vh;
}

.vh{
    height: calc(100vh - 80px);
}

.container{
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 15px;
}

.container-large{
    max-width: 1400px;
    display: flex;
}

.btn{
    background-color: #080B12;
    border: 2px solid white;
    border-radius: 30px;
    color: white;
    padding: 15px 40px;
    font-size: 12px;
}

.col-img{
    width: calc(100% / 6 - 16px);
}

.col-img img{
    display: block;
}

.gap{
    gap: 15px;
}

.bd-r{
    border-radius: 100%;
}

.row{
    width: 100%;
    flex-wrap: wrap;
}

#pd-b{
    padding-bottom: 20px;
}

a{
    text-decoration: none;
    color: #7D7F84;
}

.btns{
    background-color: transparent;
    border: none;
    color: white;
    font-size: 16px;
    cursor: pointer;
}
/* GENERAL */

/* TYPO */
h1{
    color: white;
    padding-left: 20px;
    font-size: 20px;
    margin-top: 25px;
}

h2{
    color: white;
    padding-top: 30px;
    padding-bottom: 50px;
    padding-left: 15px;
}

h4{
    color: white;
    font-size: 15px;
    padding-top: 15px;
}

h6{
    color: white;
    font-size: 14px;
}
/* TYPO */

/* HEADER */
header{
    width: 230px;
    background-color: #000000;
    flex-shrink: 0;
}

header::-webkit-scrollbar{
    display: none;
}

header:hover{
    overflow-y: scroll;
    transition-duration: 0.7s;
}

.logo{
    padding: 25px 0;
    padding-left: 20px;
    background-color: black;
    position: sticky;
    top: 0;
    left: 0;
    z-index: 9;
}

.logo-small{
    display:none;
    width: 70%;

}

.home ul{
    list-style: none;
    color: #717171;
}

.home ul li:first-child{
    color: white;
}

.home li {
    margin-bottom: 10px;
}

.home li{ 
    border-left: 2px solid #adff2f;
}

.home li:not(:first-child){
    border-left: none;
}

.home img {
    vertical-align: middle;
}

.playlist-container{
    margin-top: 10px;
    padding-left: 20px;
}

.square-w{
    height: 40px;
    width: 40px;
    background-color: #717171;
    text-align: center;
    line-height: 35px;
    font-size: 41px;
    cursor: default;
}

.playlist-container p{
    color: #717171;
    font-size: 16px;
    line-height: 40px;
    margin-left: 5px;
    cursor: default;
}

.play-list li{
    color: #717171;
    margin-top: 10px;
    list-style: none;
    font-size: 13px;
}

.header-top{
    height: calc(100vh - 80px);
}

.header-top li{
    padding-left: 20px;
}

.header-bottom{
    height: 80px;
    margin-left: 20px;
}

.header-bottom a img{
    vertical-align: sub;
    margin-right: 5px;
    color: #717171;
}

.header-bottom a{
    text-decoration: none;
    color: #717171;
}

.header-bottom hr{
    margin: 10px 0;
    width: 170px;
    border-color: #717171;
}

.circle{
    height: 25px;
    width: 25px;
    background-color: #717171;
    border-radius: 100%;
    text-align: center;
}

.circle img{
    width: 73%;
}

.profile{
    color: #717171;
}

.mtrm{
    margin-left: 7px;
    color: white;
}
/* HEADER */

/* MAIN */
main{
    background-color: #141922;
    overflow-y: auto;
    flex-grow: 1;
}

main::-webkit-scrollbar{
    display: none;
}

.top-main{
    min-height: 90px;
    background-color: #080B12;
    text-align: right;
    padding-top: 20px;
    padding-right: 10px;
    position: sticky;
    top: 0;
    left: 0;
    z-index: 10;
}

.list ul{
    list-style: none;
    text-align: center;
    gap: 10px;
    justify-content: center;
    display: flex;
    padding-top: 10px;
    flex-wrap: wrap;
}

nav li{
    color: #7A7C81;
}

nav li:first-child::after{
    display: block;
    content: "";
    height: 3px;
    width: 40px;
    background-color: #ADFF2F;
    margin: auto;
    margin-top: 2px;
}

.description-img{
    text-align: center;
}

.description-img span{
    color: #7A7C81;
    font-size: 12px;
}

.container h2{
    padding-bottom: 20px;
}

.container span{
    color: #7A7C81;
    font-size: 12px;
}

.container p{
    padding-bottom: 15px;
    color: #7A7C81;
    font-size: 12px;
    padding-left: 15px;
}


/* MAIN */

/* FOOTER */
footer{
    min-height: 90px;
    background-color: #282828;
    position: sticky;
    bottom: 0;
    left: 0;
    z-index: 10;
}

.col-small{
    width: 25%;
}

.col-small img{
    padding-top: 15px;
    padding-left: 10px;
    padding-bottom: 15px;
    width: 30%;
    max-width: 60px;
}

.song-description{
    padding-left: 10px;
}

.song-description p{
    color: #7A7C81;
    font-size: 9px;
}

.footer-left{
    align-items: center;
    height: 100%;
}

.footer-left .icons{
    color: #7A7C81;
    padding-left: 15px;
    gap: 15px;
    align-items: center;
}

.col-big{
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.timing_btns{
    display: flex;
    align-items: center;
    gap: 30px;
    color: white;
}

.timing_bar{
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 15px;
    width: 60%;
    font-size: .6rem;
    max-width: 600px;
}

.bar{  
    width: 80%;
    margin: auto;
    background-color: #5A5A5A;
    height: 4px;
    border-radius: 2px;
    position: relative;
}

.time{
    color: white;
    font-size: 12px;
    padding: 0 10px;
}

.real-bar{
    width: 20%;
    background-color: white;
    height: 4px;
    border-radius: 2px;
    position: absolute;
}

.joystick {
    width: 13px;
    aspect-ratio: 1;
    border-radius: 50%;
    background-color: white;
    position: absolute;
    right: 0;
    top: -4px;
    display: none;
}

.footer-right{
   display: flex;
   align-items: center;
   height: 100%;
} 

.footer-right .icons{
    color: white;
    gap: 15px;
    padding-right: 15px;
}
/* FOOTER */

/* HOVER */
.listoverlay{
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    opacity: 0;
    font-size: 24px;
    background-color: rgba(0, 0, 0, 0.4);
    border: none;
    cursor: pointer;
}

.albumcover{
    position: relative;
}

.albumcover:hover .listoverlay{
    opacity: 1;
}

.bar:hover .joystick{
    display: block;
}

.bar:hover .real-bar{
    background-color: lime;
}

a:hover, li:hover{
    color: white;
    cursor: pointer;
}

.footer-left p:hover{
    color: white;
    cursor: pointer;
}

.header-bottom span:hover{
    color: white;
}

.song-description p:hover{
    text-decoration: underline;
}

.playlist-container p:hover{
    color: white;
}

.square-w:hover{
    background-color: white;
}

.footer-left .heart:hover, .folder:hover{
    color: white;
}

.btn:hover{
    transform: scale(1.1);
}

.play-btn:hover{
    transform: scale(1.2);
}

.home li:not(:first-child):hover{
    border-left: 2px solid #adff2f;
}
/* HOVER */

/* RESPONSIVE */
@media screen and (max-width:880px){

    .col-img{
        width: calc(100% / 4 - 16px);
    }
}

@media screen and (max-width:630px){

    .col-img{
        width: calc(100% / 2 - 16px);
    }

    .footer-left .icons{
        display: block;
        padding-left: 10px;
    }


}

@media screen and (max-width:530px){

    header{
        width: 50px;
        padding-top: 10px;
    }

    header::-webkit-scrollbar{
        display: none;
    }

    .logo{
        display: none;
    }
    
    .logo-small{
        display: inline;
        width: 80%;
        margin-top: 5px;
    }

    .d-none{
        display: none;
    }

    .home img{
        width: 80%;
        margin-top: 10px;
    }

    h1, .playlist-container, .play-list {
        display:none;
    }

    .header-top, .header-bottom{
        margin-left: 11px;
    }

    .header-top{
        height: calc(100% - 76px);
    }

    .header-bottom img{
        width: 19px;
    }

    .header-bottom a img{
        margin-left: 1px;
        margin-bottom: 15px;
    }

    main::-webkit-scrollbar{
        display: none;
    }

    .home li{
        border: none;
    }

    .header-top li{
        padding-left: 0px;
    }

    .home li:not(:first-child):hover{
        border: none;
    }
}
/* RESPONSIVE */

